app5PasswordStorageAndVerification/microservice4/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app5-microservice4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app5-microservice4
  template:
    metadata:
      labels:
        app: app5-microservice4
    spec:
      containers:
      - name: app5-microservice4
        image: b0rkemborina/zta-cybersec-suite:app5microservice4
        ports:
        - containerPort: 8043
