app5PasswordStorageAndVerification/microservice4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app5-microservice4
spec:
  selector:
    app: app5-microservice4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8043
  type: ClusterIP
