app5PasswordStorageAndVerification/microservice4/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app5-microservice4
spec:
  selector:
    matchLabels:
      app: app5-microservice4
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app5-microservice1",
          "cluster.local/ns/default/sa/app5-microservice3"
        ]
